# rust-space-invaders

./: Cargo.toml  README.md
src/: lib.rs  main.rs  state.rs
src/base/: bloco.rs  collisionbody.rs  enemy.rs  mod.rs  player.rs  retangulo.rs  shoot.rs  vector2d.rs
src/class/: mod.rs  retangulo.rs
src/enums/: entity_enum.rs  mod.rs  update_commands.rs
src/interface/: draw_base.rs  mod.rs
src/structs/: collisionbody.rs  enemy.rs  mod.rs  player.rs  shoot.rs  vector2d.rs
src/traits/: base_game_flow.rs  collision.rs  controler.rs  draw.rs  draw_base.rs  mod.rs  update.rs
