[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impls="1"
rand="0.8.5"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]

[lib]
path="src/lib.rs"

[[bin]]
name = "game"
path = "src/bin/game.rs"